--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // bouncy
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.factor:bouncy:1.8'
 }
